# TinyGPT

./: Makefile  README.md  pyproject.toml  requirements.txt  requirements1.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: TinyGPT.ipynb  hf_demo.ipynb  model_eager.pth  model_moe_eager.pth
notebooks/checkpoints/: checkpoint_final.pt
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/229404337937264634/: meta.yaml
tinygpt/: __init__.py  config.py  dataset.py  features.py  plots.py
tinygpt/modeling/: predict.py  train.py
