[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tinygpt"
version = "0.0.1"
description = "A small GPT using Cookiecutter, HuggingFace, MLflow, and ONNX Runtime"
authors = [
  { name = "Lautaro Medina" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["tinygpt"]
include = ["pyproject.toml", "tinygpt/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tinygpt"]
force-sort-within-sections = true

